# storkitty-v2

./: .gitignore  Cargo.toml  LICENSE  README.md  biome.json  components.json  config.toml  package.json  postcss.config.mjs  rsbuild.config.ts  tsconfig.json  tsr.config.json
src/: main.rs
src/backend/: error.rs  mod.rs
src/backend/api/: app.rs  download.rs  log.rs  login.rs  mod.rs  setup.rs
src/backend/api/file/: content.rs  create.rs  delete.rs  list.rs  mod.rs  rename.rs  upload.rs
src/backend/api/folder/: create.rs  delete.rs  mod.rs  rename.rs
src/backend/db/: mod.rs  storage.rs  user.rs
src/backend/extractor/: auth.rs  mod.rs  storage.rs
src/backend/utils/: auth.rs  file.rs  mod.rs  path.rs  time.rs  validate.rs
src/frontend/: index.css  index.tsx
src/frontend/api/: http.ts
src/frontend/api/app/: index.ts
src/frontend/api/auth/: login.ts  setup.ts
src/frontend/api/file/: content.ts  create.ts  delete.ts  list.ts  rename.ts  upload.ts
src/frontend/api/folder/: create.ts  delete.ts  rename.ts
src/frontend/api/log/: create.ts  delete.ts  list.ts  update.ts
src/frontend/components/: AuthRouter.tsx  menu-list.tsx  time-display.tsx
src/frontend/components/ui/: theme-switch-button.tsx
src/frontend/hooks/: use-app.tsx  use-auth.ts  use-file-list.tsx  use-file-upload.tsx  use-task.tsx  use-window-size.ts
src/frontend/lib/: file.ts  token.ts
src/frontend/routes/: __root.tsx  index.tsx  login.tsx  routeTree.gen.ts  setup.tsx
src/frontend/routes/list/: route.tsx
src/frontend/routes/log/: index.tsx
(+22 files in other folders)
